tests/ui/rfcs/rfc-0000-never_patterns/unreachable.exh_pats.stderr
error: unreachable pattern
  --> $DIR/unreachable.rs:17:9
   |
LL |         Err(!),
   |         ^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unreachable.rs:7:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/unreachable.rs:21:12
   |
LL |     if let Err(!) = res_void {}
   |            ^^^^^^

error: unreachable pattern
  --> $DIR/unreachable.rs:23:24
   |
LL |     if let (Ok(true) | Err(!)) = res_void {}
   |                        ^^^^^^

error: unreachable pattern
  --> $DIR/unreachable.rs:25:23
   |
LL |     for (Ok(mut _x) | Err(!)) in [res_void] {}
   |                       ^^^^^^

error: aborting due to 4 previous errors

